fix fliters select size and alignment

--- a/style.css
+++ b/style.css
@@ -438,8 +438,17 @@ body.dark .product-card .product-price{
 }
 
 @media (max-width: 768px) {
+
+  .filter-group {
+      justify-content: center;
+    }
+    .filter-select{
+     
+       min-width: 49%;
+    }
   .menu-toggle {
     display: flex;
+    
   }
 
   .nav-links {
@@ -590,6 +599,7 @@ body.dark .product-card .product-price{
   display: flex;
   gap: 15px;
   align-items: center;
+
 }
 
 .filter-select {
@@ -599,6 +609,8 @@ body.dark .product-card .product-price{
   background-color: white;
   font-size: 14px;
   cursor: pointer;
+  width: 25%;
+ 
 }
 
 .view-options {
